Fb leaderboard (#31)
* add leaderboard

* fix an error

* fix some errors

* fix timestamp error

* have a working leaderboard

* fix events processing to process only event from the current app, add application id to the user key
