# impl/src/main/java/ch/heigvd/amt/gamificator/api/pointScale/PointScaleService.java
@@ -3,10 +3,12 @@ package ch.heigvd.amt.gamificator.api.pointScale;
 import ch.heigvd.amt.gamificator.api.application.ApplicationMapper;
 import ch.heigvd.amt.gamificator.api.application.ApplicationService;
 import ch.heigvd.amt.gamificator.api.model.ApplicationDTO;
+import ch.heigvd.amt.gamificator.api.model.LeaderBoardDTO;
 import ch.heigvd.amt.gamificator.api.model.PointScaleCreateCommand;
 import ch.heigvd.amt.gamificator.api.model.PointScaleDTO;
 import ch.heigvd.amt.gamificator.entities.Application;
 import ch.heigvd.amt.gamificator.entities.PointScale;
+import ch.heigvd.amt.gamificator.exceptions.AlreadyExistException;
 import ch.heigvd.amt.gamificator.exceptions.NotAuthorizedException;
 import ch.heigvd.amt.gamificator.exceptions.NotFoundException;
 import ch.heigvd.amt.gamificator.repositories.ApplicationRepository;
@@ -29,11 +31,15 @@ public class PointScaleService {
     @Autowired
     private ApplicationService applicationService;
 
-    public PointScaleDTO createPointScale(PointScaleCreateCommand pointScaleCreateCommand, long applicationId) throws NotFoundException {
+    public PointScaleDTO createPointScale(PointScaleCreateCommand pointScaleCreateCommand, long applicationId) throws NotFoundException, AlreadyExistException {
         PointScale pointScale = PointScaleMapper.toEntity(pointScaleCreateCommand);
 
         ApplicationDTO applicationDTO = applicationService.getApplicationById(applicationId);
         Application application = ApplicationMapper.toEntity(applicationDTO);
+
+        if(pointScaleRepository.findByNameAndApplicationId(pointScaleCreateCommand.getName(), applicationId).isPresent()) {
+            throw new AlreadyExistException("Point scale already exists with this name!");
+        }
 
         pointScale.setApplication(application);
 
